--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Tianyi Kuang"
+  pronouns         : "he/his"  
+  bio              : "Third year undergraduate student from Tsinghua University"
+  location         : "Beijing, China"
+  employer         : 
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "kty22@mails.tsinghua.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
